--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
           <legend>Dodatkowe informacje:</legend>
           <label for="date">Data wyjazdu:</label>
           <input type="date" id="date" name="date" required />
-          <label for="number">Liczba osób:</label>
+          <label for="participants">Liczba osób:</label>
           <input type="number" id="participants" name="participants" required />
           <label for="country">Kraj:</label>
           <select id="country" name="country" required>
@@ -32,7 +32,7 @@
             <option value="Hiszpania">Hiszpania</option>
           </select>
           <label for="textarea">Dodatkowe informacje:</label>
-          <input type="text" id="textarea" name="textarea"/>
+          <textarea id="textarea" name="textarea"></textarea>
         </fieldset>
         <fieldset style="background-color: aquamarine;">
           <legend>Wazne!</legend>
